refactor(terminal): apply Java 21 modern patterns to terminal views
- Add self field comments for fluent method chaining documentation
- Replace switch statements with switch expressions and arrow syntax
- Use text blocks for multi-line help output
- Add static constants for command names and descriptions
- Use List.of() for immutable command lists
- Add pattern matching for instanceof
- Add default printInfo method to TerminalCommand interface
- Use forEach with lambdas for cleaner iteration