@@ -23,39 +23,40 @@ import java.util.Map;
 @Route
 @FrameTitle("Custom Terminal")
 @InlineStyleSheet("""
-  dwc-window-center {
-    background-color: #1e1e1e;
-  }
-""")
+    dwc-window-center {
+      background-color: #1e1e1e;
+    }
+  """)
 public class TerminalView extends Composite<Terminal> {
-  private Terminal self = getBoundComponent();
-  private StringBuilder commandBuffer = new StringBuilder();
-  private List<String> commandHistory = new ArrayList<>();
+  // self field enables fluent method chaining from the bound component
+  private final Terminal self = getBoundComponent();
+  private final StringBuilder commandBuffer = new StringBuilder();
+  private final List<String> commandHistory = new ArrayList<>();
   private int historyIndex = -1;
   private final Map<String, TerminalCommand> commands = new HashMap<>();
 
   public TerminalView() {
     self.setAutoFit(true)
-        .setSize("95%", "95%")
-        .setStyle("margin", "var(--dwc-space-m)")
-        .addDataListener(this::onData);
+      .setSize("95%", "95%")
+      .setStyle("margin", "var(--dwc-space-m)")
+      .writeln("\u001B[1;32mWelcome 👋  to the webforJ terminal!\u001B[0m")
+      .writeln("Type \u001B[1;33m`help`\u001B[0m to see a list of supported commands.")
+      .write("$ ")
+      .addDataListener(this::onData);
 
-    self.writeln("\u001B[1;32mWelcome 👋  to the webforJ terminal!\u001B[0m");
-    self.writeln("Type \u001B[1;33m`help`\u001B[0m to see a list of supported commands.");
-    self.write("$ ");
 
     registerCommands();
     self.focus();
   }
 
   private void registerCommands() {
-    List<TerminalCommand> commandList = Arrays.asList(
-        new TimeCommand(),
-        new DateCommand(),
-        new PromptCommand(),
-        new MsgCommand(),
-        new ClearCommand(),
-        new HelpCommand(commands));
+    List<TerminalCommand> commandList = List.of(
+      new TimeCommand(),
+      new DateCommand(),
+      new PromptCommand(),
+      new MsgCommand(),
+      new ClearCommand(),
+      new HelpCommand(commands));
 
     for (TerminalCommand command : commandList) {
       commands.put(command.getName(), command);
@@ -86,32 +87,29 @@ public class TerminalView extends Composite<Terminal> {
     String input = e.getValue();
     boolean isPrintable = input.chars().allMatch(c -> (c >= 0x20 && c <= 0x7E) || c >= 0xA0);
 
+    // Use enhanced switch with pattern matching for cleaner input handling
     switch (input) {
-      case "\r":
+      case "\r" -> {
         self.write("\r\n");
-        if (commandBuffer.length() > 0) {
+        if (!commandBuffer.isEmpty()) {
           commandHistory.add(commandBuffer.toString());
           historyIndex = commandHistory.size();
         }
         processCommand();
-        break;
-
-      case "\u007F":
-      case "\b":
-        if (commandBuffer.length() > 0) {
+      }
+      case "\u007F", "\b" -> {
+        if (!commandBuffer.isEmpty()) {
           commandBuffer.deleteCharAt(commandBuffer.length() - 1);
           self.write("\b \b");
         }
-        break;
-
-      case "\u001b[A":
+      }
+      case "\u001b[A" -> {
         if (historyIndex > 0) {
           historyIndex--;
           replaceCommandBuffer(commandHistory.get(historyIndex));
         }
-        break;
-
-      case "\u001b[B":
+      }
+      case "\u001b[B" -> {
         if (historyIndex < commandHistory.size() - 1) {
           historyIndex++;
           replaceCommandBuffer(commandHistory.get(historyIndex));
@@ -119,19 +117,18 @@ public class TerminalView extends Composite<Terminal> {
           historyIndex++;
           replaceCommandBuffer("");
         }
-        break;
-
-      default:
+      }
+      default -> {
         if (isPrintable) {
           commandBuffer.append(input);
           self.write(input);
         }
-        break;
+      }
     }
   }
 
   private void replaceCommandBuffer(String newBuffer) {
-    while (commandBuffer.length() > 0) {
+    while (!commandBuffer.isEmpty()) {
       self.write("\b \b");
       commandBuffer.setLength(commandBuffer.length() - 1);
     }
